update add track_timestamps_staleness
Signed-off-by: dongjiang1989 <dongjiang1989@126.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -3,8 +3,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.11.1
     operator.prometheus.io/version: 0.69.1
+  creationTimestamp: null
   name: alertmanagerconfigs.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
@@ -239,7 +240,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           httpConfig:
                             description: HTTP client configuration.
                             properties:
@@ -352,7 +352,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -633,7 +632,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           authSecret:
                             description: The secret's key that contains the CRAM-MD5
                               secret. The secret needs to be in the same namespace
@@ -656,7 +654,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           authUsername:
                             description: The username to use for authentication.
                             type: string
@@ -954,7 +951,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -1220,7 +1216,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                         required:
                         - webhookUrl
                         type: object
@@ -1262,7 +1257,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           apiURL:
                             description: The URL to send OpsGenie API requests to.
                             type: string
@@ -1403,7 +1397,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -1854,7 +1847,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -2152,7 +2144,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           sendResolved:
                             description: Whether or not to notify about resolved alerts.
                             type: boolean
@@ -2180,7 +2171,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           severity:
                             description: Severity of the incident.
                             type: string
@@ -2317,7 +2307,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -2601,7 +2590,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           tokenFile:
                             description: The token file that contains the registered
                               application's API token, see https://pushover.net/apps.
@@ -2638,7 +2626,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           userKeyFile:
                             description: The user key file that contains the recipient
                               user's user key. Either `userKey` or `userKeyFile` is
@@ -2721,7 +2708,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           callbackId:
                             type: string
                           channel:
@@ -2871,7 +2857,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -3268,7 +3253,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -3630,7 +3614,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           botTokenFile:
                             description: "File to read the Telegram bot token from.
                               It is mutually exclusive with `botToken`. Either `botToken`
@@ -3756,7 +3739,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -4037,7 +4019,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           apiUrl:
                             description: The VictorOps API URL.
                             type: string
@@ -4173,7 +4154,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -4556,7 +4536,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -4927,7 +4906,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -5203,7 +5181,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                         type: object
                       type: array
                     wechatConfigs:
@@ -5236,7 +5213,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           apiURL:
                             description: The WeChat API URL.
                             type: string
@@ -5355,7 +5331,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -5721,8 +5696,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.11.1
     operator.prometheus.io/version: 0.69.1
+  creationTimestamp: null
   name: alertmanagers.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
@@ -13142,8 +13118,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.11.1
     operator.prometheus.io/version: 0.69.1
+  creationTimestamp: null
   name: podmonitors.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
@@ -13759,6 +13736,11 @@ spec:
                           description: Used to verify the hostname for the targets.
                           type: string
                       type: object
+                    trackTimestampsStaleness:
+                      description: TrackTimestampsStaleness whether Prometheus tracks
+                        staleness of the metrics that have an explicit timestamps
+                        present in scraped data. It requires Prometheus >= v2.48.0.
+                      type: boolean
                   type: object
                 type: array
               podTargetLabels:
@@ -13837,8 +13819,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.11.1
     operator.prometheus.io/version: 0.69.1
+  creationTimestamp: null
   name: probes.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
@@ -14574,8 +14557,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.11.1
     operator.prometheus.io/version: 0.69.1
+  creationTimestamp: null
   name: prometheusagents.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
@@ -18650,6 +18634,11 @@ spec:
                 description: When true, Prometheus ignores the timestamps for all
                   the targets created from service and pod monitors. Otherwise the
                   HonorTimestamps field of the service or pod monitor applies.
+                type: boolean
+              overrideTrackTimestampsStaleness:
+                description: When true, Prometheus ignores the timestamps for all
+                  the targets created from service and pod monitors. Otherwise the
+                  TrackTimestampsStaleness field of the service or pod monitor applies.
                 type: boolean
               paused:
                 description: When a Prometheus deployment is paused, no actions except
@@ -23084,8 +23073,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.11.1
     operator.prometheus.io/version: 0.69.1
+  creationTimestamp: null
   name: prometheuses.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
@@ -27591,6 +27581,11 @@ spec:
                 description: When true, Prometheus ignores the timestamps for all
                   the targets created from service and pod monitors. Otherwise the
                   HonorTimestamps field of the service or pod monitor applies.
+                type: boolean
+              overrideTrackTimestampsStaleness:
+                description: When true, Prometheus ignores the timestamps for all
+                  the targets created from service and pod monitors. Otherwise the
+                  TrackTimestampsStaleness field of the service or pod monitor applies.
                 type: boolean
               paused:
                 description: When a Prometheus deployment is paused, no actions except
@@ -32997,8 +32992,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.11.1
     operator.prometheus.io/version: 0.69.1
+  creationTimestamp: null
   name: prometheusrules.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
@@ -33128,8 +33124,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.11.1
     operator.prometheus.io/version: 0.69.1
+  creationTimestamp: null
   name: scrapeconfigs.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
@@ -33231,7 +33228,6 @@ spec:
                       required:
                       - key
                       type: object
-                      x-kubernetes-map-type: atomic
                     environment:
                       description: The Azure environment.
                       type: string
@@ -33531,7 +33527,6 @@ spec:
                         required:
                         - key
                         type: object
-                        x-kubernetes-map-type: atomic
                       description: Specifies headers to send to proxies during CONNECT
                         requests.
                       type: object
@@ -33718,7 +33713,6 @@ spec:
                       required:
                       - key
                       type: object
-                      x-kubernetes-map-type: atomic
                   required:
                   - server
                   type: object
@@ -33789,7 +33783,6 @@ spec:
                       required:
                       - key
                       type: object
-                      x-kubernetes-map-type: atomic
                     filters:
                       description: 'Filters can be used optionally to filter the instance
                         list by other criteria. Available filter criteria can be found
@@ -33844,7 +33837,6 @@ spec:
                       required:
                       - key
                       type: object
-                      x-kubernetes-map-type: atomic
                   type: object
                 type: array
               fileSDConfigs:
@@ -34552,6 +34544,11 @@ spec:
                     description: Used to verify the hostname for the targets.
                     type: string
                 type: object
+              trackTimestampsStaleness:
+                description: "TrackTimestampsStaleness whether Prometheus tracks staleness
+                  of the metrics that have an explicit timestamps present in scraped
+                  data. \n It requires Prometheus >= v2.48.0."
+                type: boolean
             type: object
         required:
         - spec
@@ -34564,8 +34561,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.11.1
     operator.prometheus.io/version: 0.69.1
+  creationTimestamp: null
   name: servicemonitors.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
@@ -35171,6 +35169,11 @@ spec:
                           description: Used to verify the hostname for the targets.
                           type: string
                       type: object
+                    trackTimestampsStaleness:
+                      description: "TrackTimestampsStaleness whether Prometheus tracks
+                        staleness of the metrics that have an explicit timestamps
+                        present in scraped data. \n It requires Prometheus >= v2.48.0."
+                      type: boolean
                   type: object
                 type: array
               jobLabel:
@@ -35300,8 +35303,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.11.1
     operator.prometheus.io/version: 0.69.1
+  creationTimestamp: null
   name: thanosrulers.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
