--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -3,8 +3,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.11.1
     operator.prometheus.io/version: 0.69.1
+  creationTimestamp: null
   name: alertmanagerconfigs.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
@@ -239,7 +240,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           httpConfig:
                             description: HTTP client configuration.
                             properties:
@@ -352,7 +352,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -633,7 +632,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           authSecret:
                             description: The secret's key that contains the CRAM-MD5
                               secret. The secret needs to be in the same namespace
@@ -656,7 +654,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           authUsername:
                             description: The username to use for authentication.
                             type: string
@@ -954,7 +951,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -1220,7 +1216,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                         required:
                         - webhookUrl
                         type: object
@@ -1262,7 +1257,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           apiURL:
                             description: The URL to send OpsGenie API requests to.
                             type: string
@@ -1403,7 +1397,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -1854,7 +1847,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -2152,7 +2144,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           sendResolved:
                             description: Whether or not to notify about resolved alerts.
                             type: boolean
@@ -2180,7 +2171,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           severity:
                             description: Severity of the incident.
                             type: string
@@ -2317,7 +2307,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -2601,7 +2590,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           tokenFile:
                             description: The token file that contains the registered
                               application's API token, see https://pushover.net/apps.
@@ -2638,7 +2626,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           userKeyFile:
                             description: The user key file that contains the recipient
                               user's user key. Either `userKey` or `userKeyFile` is
@@ -2721,7 +2708,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           callbackId:
                             type: string
                           channel:
@@ -2871,7 +2857,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -3268,7 +3253,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -3630,7 +3614,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           botTokenFile:
                             description: "File to read the Telegram bot token from.
                               It is mutually exclusive with `botToken`. Either `botToken`
@@ -3756,7 +3739,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -4037,7 +4019,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           apiUrl:
                             description: The VictorOps API URL.
                             type: string
@@ -4173,7 +4154,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -4556,7 +4536,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -4927,7 +4906,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
@@ -5203,7 +5181,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                         type: object
                       type: array
                     wechatConfigs:
@@ -5236,7 +5213,6 @@ spec:
                             required:
                             - key
                             type: object
-                            x-kubernetes-map-type: atomic
                           apiURL:
                             description: The WeChat API URL.
                             type: string
@@ -5355,7 +5331,6 @@ spec:
                                 required:
                                 - key
                                 type: object
-                                x-kubernetes-map-type: atomic
                               followRedirects:
                                 description: FollowRedirects specifies whether the
                                   client should follow HTTP 3xx redirects.
