--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
@@ -3,8 +3,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.11.1
     operator.prometheus.io/version: 0.69.1
+  creationTimestamp: null
   name: prometheusagents.monitoring.coreos.com
 spec:
   group: monitoring.coreos.com
@@ -4079,6 +4080,11 @@ spec:
                 description: When true, Prometheus ignores the timestamps for all
                   the targets created from service and pod monitors. Otherwise the
                   HonorTimestamps field of the service or pod monitor applies.
+                type: boolean
+              overrideTrackTimestampsStaleness:
+                description: When true, Prometheus ignores the timestamps for all
+                  the targets created from service and pod monitors. Otherwise the
+                  TrackTimestampsStaleness field of the service or pod monitor applies.
                 type: boolean
               paused:
                 description: When a Prometheus deployment is paused, no actions except
