--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -3,9 +3,10 @@
   "kind": "CustomResourceDefinition",
   "metadata": {
     "annotations": {
-      "controller-gen.kubebuilder.io/version": "v0.13.0",
+      "controller-gen.kubebuilder.io/version": "v0.11.1",
       "operator.prometheus.io/version": "0.69.1"
     },
+    "creationTimestamp": null,
     "name": "alertmanagerconfigs.monitoring.coreos.com"
   },
   "spec": {
@@ -255,8 +256,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               },
                               "httpConfig": {
                                 "description": "HTTP client configuration.",
@@ -362,8 +362,7 @@
                                     "required": [
                                       "key"
                                     ],
-                                    "type": "object",
-                                    "x-kubernetes-map-type": "atomic"
+                                    "type": "object"
                                   },
                                   "followRedirects": {
                                     "description": "FollowRedirects specifies whether the client should follow HTTP 3xx redirects.",
@@ -662,8 +661,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               },
                               "authSecret": {
                                 "description": "The secret's key that contains the CRAM-MD5 secret. The secret needs to be in the same namespace as the AlertmanagerConfig object and accessible by the Prometheus Operator.",
@@ -684,8 +682,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               },
                               "authUsername": {
                                 "description": "The username to use for authentication.",
@@ -996,8 +993,7 @@
                                     "required": [
                                       "key"
                                     ],
-                                    "type": "object",
-                                    "x-kubernetes-map-type": "atomic"
+                                    "type": "object"
                                   },
                                   "followRedirects": {
                                     "description": "FollowRedirects specifies whether the client should follow HTTP 3xx redirects.",
@@ -1279,8 +1275,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               }
                             },
                             "required": [
@@ -1323,8 +1318,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               },
                               "apiURL": {
                                 "description": "The URL to send OpsGenie API requests to.",
@@ -1465,8 +1459,7 @@
                                     "required": [
                                       "key"
                                     ],
-                                    "type": "object",
-                                    "x-kubernetes-map-type": "atomic"
+                                    "type": "object"
                                   },
                                   "followRedirects": {
                                     "description": "FollowRedirects specifies whether the client should follow HTTP 3xx redirects.",
@@ -1943,8 +1936,7 @@
                                     "required": [
                                       "key"
                                     ],
-                                    "type": "object",
-                                    "x-kubernetes-map-type": "atomic"
+                                    "type": "object"
                                   },
                                   "followRedirects": {
                                     "description": "FollowRedirects specifies whether the client should follow HTTP 3xx redirects.",
@@ -2254,8 +2246,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               },
                               "sendResolved": {
                                 "description": "Whether or not to notify about resolved alerts.",
@@ -2280,8 +2271,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               },
                               "severity": {
                                 "description": "Severity of the incident.",
@@ -2414,8 +2404,7 @@
                                     "required": [
                                       "key"
                                     ],
-                                    "type": "object",
-                                    "x-kubernetes-map-type": "atomic"
+                                    "type": "object"
                                   },
                                   "followRedirects": {
                                     "description": "FollowRedirects specifies whether the client should follow HTTP 3xx redirects.",
@@ -2710,8 +2699,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               },
                               "tokenFile": {
                                 "description": "The token file that contains the registered application's API token, see https://pushover.net/apps. Either `token` or `tokenFile` is required. It requires Alertmanager >= v0.26.0.",
@@ -2744,8 +2732,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               },
                               "userKeyFile": {
                                 "description": "The user key file that contains the recipient user's user key. Either `userKey` or `userKeyFile` is required. It requires Alertmanager >= v0.26.0.",
@@ -2836,8 +2823,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               },
                               "callbackId": {
                                 "type": "string"
@@ -2984,8 +2970,7 @@
                                     "required": [
                                       "key"
                                     ],
-                                    "type": "object",
-                                    "x-kubernetes-map-type": "atomic"
+                                    "type": "object"
                                   },
                                   "followRedirects": {
                                     "description": "FollowRedirects specifies whether the client should follow HTTP 3xx redirects.",
@@ -3404,8 +3389,7 @@
                                     "required": [
                                       "key"
                                     ],
-                                    "type": "object",
-                                    "x-kubernetes-map-type": "atomic"
+                                    "type": "object"
                                   },
                                   "followRedirects": {
                                     "description": "FollowRedirects specifies whether the client should follow HTTP 3xx redirects.",
@@ -3775,8 +3759,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               },
                               "botTokenFile": {
                                 "description": "File to read the Telegram bot token from. It is mutually exclusive with `botToken`. Either `botToken` or `botTokenFile` is required. \n It requires Alertmanager >= v0.26.0.",
@@ -3895,8 +3878,7 @@
                                     "required": [
                                       "key"
                                     ],
-                                    "type": "object",
-                                    "x-kubernetes-map-type": "atomic"
+                                    "type": "object"
                                   },
                                   "followRedirects": {
                                     "description": "FollowRedirects specifies whether the client should follow HTTP 3xx redirects.",
@@ -4193,8 +4175,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               },
                               "apiUrl": {
                                 "description": "The VictorOps API URL.",
@@ -4331,8 +4312,7 @@
                                     "required": [
                                       "key"
                                     ],
-                                    "type": "object",
-                                    "x-kubernetes-map-type": "atomic"
+                                    "type": "object"
                                   },
                                   "followRedirects": {
                                     "description": "FollowRedirects specifies whether the client should follow HTTP 3xx redirects.",
@@ -4722,8 +4702,7 @@
                                     "required": [
                                       "key"
                                     ],
-                                    "type": "object",
-                                    "x-kubernetes-map-type": "atomic"
+                                    "type": "object"
                                   },
                                   "followRedirects": {
                                     "description": "FollowRedirects specifies whether the client should follow HTTP 3xx redirects.",
@@ -5104,8 +5083,7 @@
                                     "required": [
                                       "key"
                                     ],
-                                    "type": "object",
-                                    "x-kubernetes-map-type": "atomic"
+                                    "type": "object"
                                   },
                                   "followRedirects": {
                                     "description": "FollowRedirects specifies whether the client should follow HTTP 3xx redirects.",
@@ -5389,8 +5367,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               }
                             },
                             "type": "object"
@@ -5424,8 +5401,7 @@
                                 "required": [
                                   "key"
                                 ],
-                                "type": "object",
-                                "x-kubernetes-map-type": "atomic"
+                                "type": "object"
                               },
                               "apiURL": {
                                 "description": "The WeChat API URL.",
@@ -5539,8 +5515,7 @@
                                     "required": [
                                       "key"
                                     ],
-                                    "type": "object",
-                                    "x-kubernetes-map-type": "atomic"
+                                    "type": "object"
                                   },
                                   "followRedirects": {
                                     "description": "FollowRedirects specifies whether the client should follow HTTP 3xx redirects.",
